# ChangeLog for squash_dir

*squash_dir-12.10
	Martin Väth <martin at mvath.de>:
	- Let --with{,-first}-order patch conf.d/squash_dir correctly
	- Yet another change of default ORDER: overlayfs is first, as it
	  finally seems to be included into linux-3.11
	- Improve contrib files

*squash_dir-12.9
	Martin Väth <martin at mvath.de>:
	- Fix zsh completion: Treat context properly

*squash_dir-12.8
	Martin Väth <martin at mvath.de>:
	- Fix mksquashfs argument order for first call. Thanks to Massimo B.
	- Add RESTART option

*squash_dir-12.7
	Martin Väth <martin at mvath.de>:
	- Support global /etc/conf.d/squash_dir and provide default
	- Clear DIR_CHANGE even if THRESHOLD is not reached but no
	  essential change was made.

*squash_dir-12.6
	Martin Väth <martin at mvath.de>:
	- Add START command. Also add RESTART and STATUS to squash_dir.

*squash_dir-12.5
	Martin Väth <martin at mvath.de>:
	- Support RUNPATH
	- Change default ORDER again: aufs is first as overlayfs seems to have
	  lacking support starting with kernel 3.7.

*squash_dir-12.4
	Martin Väth <martin at mvath.de>:
	- Remove support for obsolete <sys-fs/unionfs-fuse-0.25

*squash_dir-12.3
	Martin Väth <martin at mvath.de>:
	- New ./configure options --with-first-order --with-order for patching
	- Fix COMPRESSION handling. Thanks to Massimo B. for reporting.
	- Cosmetical changes in formatting, autotools handling, zsh completion

*squash_dir-12.2
	Martin Väth <martin at mvath.de>:
	- Improve zsh completion, relying on >=runtitle-2.3

*squash_dir-12.1
	Martin Väth <martin at mvath.de>:
	- Change default of ORDER to honour changed likelihood of availability:
	  No recent aufs for kernel-3.6, but overlayfs works and might even be
	  included into the mainline kernel; unionfs seems to be dead.
	  For overlayfs, you must use the top patches in "heads":
	  http://git.kernel.org/?p=linux/kernel/git/mszeredi/vfs.git;a=summary

*squash_dir-12.0
	Martin Väth <martin at mvath.de>: