@@ -7,6 +7,9 @@ EXTRA_DIST = \
 contrib \
 autogen.sh \
 INSTALL \
+systemd/squash_dir.service \
+systemd/squash_dir@.service \
+zsh/_openrc-wrapper \
 zsh/_squash_dir
 
 dist_doc_DATA = \
@@ -27,13 +30,14 @@ nobase_dist_sysconf_DATA = \
 conf.d/squash_dir
 
 dist_sbin_SCRIPTS = \
+sbin/openrc-wrapper \
 sbin/squash_dir
 
 # Remove things created by autogen.sh
 maintainer-clean-local:
 	$(AM_V_at)$(RM) -fr "$(top_srcdir)/build" "$(top_srcdir)/config" "$(top_srcdir)/m4" "$(top_srcdir)"/tmpcvs* "$(top_srcdir)"/tmpwrk*
 	$(AM_V_at)$(RM) -f "$(top_srcdir)/aclocal.m4" "$(top_srcdir)/Makefile.in" "$(top_srcdir)/configure"
-	$(AM_V_at)for i in tar.xz tar.bz2 tar.gz zip tar.Z shar.gz shar; do rm -vf -- "$(top_srcdir)"/$(PACKAGE)-*."$${i}"; done
+	$(AM_V_at)for i in tar.xz tar.bz2 tar.gz zip; do rm -vf -- "$(top_srcdir)"/$(PACKAGE)-*."$${i}"; done
 
 # Remove things created by autogen.sh also in the tarball
 dist-hook:
@@ -41,7 +45,21 @@ dist-hook:
 	$(AM_V_at)$(RM) "$(distdir)/aclocal.m4" "$(distdir)/Makefile.in" "$(distdir)/configure"
 
 install-data-local:
-	$(AM_V_at)test x"$(ZSH_COMPLETION)" = x"" || $(INSTALL_DATA) -D "$(srcdir)/zsh/_squash_dir" "$(DESTDIR)$(ZSH_COMPLETION)/_squash_dir"
+	$(AM_V_at)if test x"$(ZSH_COMPLETION)" != x"" ; \
+	then	$(INSTALL_DATA) -D "$(srcdir)/zsh/_squash_dir" "$(DESTDIR)$(ZSH_COMPLETION)/_squash_dir" && \
+		$(INSTALL_DATA) -D "$(srcdir)/zsh/_openrc-wrapper" "$(DESTDIR)$(ZSH_COMPLETION)/_openrc-wrapper" ; \
+	fi
+	$(AM_V_at)if test x"$(SYSTEMSYSTEMUNITDIR)" != x"" ; \
+	then	$(INSTALL_DATA) -D "$(srcdir)/systemd/squash_dir.service" "$(DESTDIR)$(SYSTEMSYSTEMUNITDIR)/squash_dir.service" && \
+		$(INSTALL_DATA) -D "$(srcdir)/systemd/squash_dir@.service" "$(DESTDIR)$(SYSTEMSYSTEMUNITDIR)/squash_dir@.service" ; \
+	fi
 
 uninstall-local:
-	$(AM_V_at)test x"$(ZSH_COMPLETION)" = x"" || $(RM) "$(DESTDIR)$(ZSH_COMPLETION)/_squash_dir"
+	$(AM_V_at)if test x"$(ZSH_COMPLETION)" != x"" ; \
+	then	$(RM) "$(DESTDIR)$(ZSH_COMPLETION)/_squash_dir" && \
+		$(RM) "$(DESTDIR)$(ZSH_COMPLETION)/_openrc-wrapper" ; \
+	fi
+	$(AM_V_at)if test x"$(SYSTEMSYSTEMUNITDIR)" != x"" ; \
+	then	$(RM) "$(DESTDIR)$(SYSTEMSYSTEMUNITDIR)/squash_dir.service" && \
+		$(RM) "$(DESTDIR)$(SYSTEMSYSTEMUNITDIR)/squash_dir@.service" ; \
+	fi
